--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -9,7 +9,7 @@
     "### Scott Kravitz (swkravitz@lbl.gov)\n",
     "#### Adapted from a tutorial by Scott Kravitz, Micah Buuck (mbuuck@slac.stanford.edu), and Reed Watson (watson_james@berkeley.edu)\n",
     "### DATE: August 2020\n",
-    "##### **USE KERNEL: kernel name**\n",
+    "##### **Run on Google colab [here](https://colab.research.google.com/github/swkravitz/dance-ml-2020-tutorial/blob/master/DANCE_ML_Intro_Tutorial.ipynb) **\n",
     "This example runs through all of the major conceptual steps involved in a common machine learning application. It is focused on fairly basic algorithms (boosted decision trees and multi-layer perceptrons i.e. simple neural nets) that use only a few high-level input variables and do not require much tuning by the user. \n",
     "It is meant to show how to load and investigate particle physics data in ROOT format with uproot, train a basic model, gauge its performance, and save the model for future use. \n",
     "\n",
@@ -20,6 +20,31 @@
     "** How data was generated using NEST here **\n",
     "\n",
     "**Aside on packages:** We focus on the scikit-learn package for boosted decision trees and the TensorFlow 2 package for neural nets. TensorFlow 2 is an excellent package for most modern deep learning, i.e. neural nets of all kinds. scikit-learn has the benefit of having the widest variety of machine learning algorithms and being well-documented; it also includes a number of helper functions that are useful for data prep and performance evaluation, regardless of which package is used for training. There is also an XGBoost section at the end that goes through the corresponding code for training and investigating a boosted decision tree - it is a dedicated package for boosted decision trees, and is generally more performant and has more features than sklearn's BDT."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**To run on Google colab, you must install the uproot package:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --user -q uproot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`!` is an IPython magic command which causes the subsequent line to be executed by the shell instead of with the Python interpreter. Documentation on it can be found at https://ipython.readthedocs.io/en/stable/interactive/magics.html#magic-system\n",
+    "\n",
+    "**<p style=\"color:red;\">Note: After installing packages (such as uproot), you will have to restart the kernel for the changes to take effect (from top menu, Runtime -> Restart runtime). If running on your own machine, install the additional packages below; you may find errors related to outdated versions of those packages, which can be solved by running the corresponding pip command with the --U flag added to the other flags (you may want to remove -q so you can see the status output).</p>**"
    ]
   },
   {
@@ -42,15 +67,6 @@
     "# !pip install --user -q tensorflow\n",
     "# You may also need to install other packages, like ipykernel, or may have to upgrade dependencies (add the -U flag to pip commands to upgrade)\n",
     "# We do not attempt to include all dependencies for running on your local environment here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`!` is an IPython magic command which causes the subsequent line to be executed by the shell instead of with the Python interpreter. Documentation on it can be found at https://ipython.readthedocs.io/en/stable/interactive/magics.html#magic-system\n",
-    "\n",
-    "**<p style=\"color:red;\">Note: If you had to install the packages above, you will have to restart the kernel for the changes to take effect (from top menu, Kernel -> Restart). If running on your own machine, you may also find errors related to outdated versions of the packages above, which can be solved by running the corresponding pip command with the --U flag added to the other flags (you may want to remove -q so you can see the status output).</p>**"
    ]
   },
   {
@@ -106,6 +122,41 @@
     "We are going to train an algorithm to identify a scatter as originating from either \"ER\" (single-scatters from CH3T data) or \"NR\" (single-scatters from DD data). We are going to train a [boosted decision tree](https://en.wikipedia.org/wiki/Gradient_boosting) with scikit-learn, a simple [3-layer perceptron](https://en.wikipedia.org/wiki/Multilayer_perceptron) in TensorFlow, and a BDT using [XGBoost](https://xgboost.readthedocs.io/en/latest/)).\n",
     "\n",
     "We'll use [uproot](https://pypi.org/project/uproot/) to read in the data. Uproot is a Python package for importing ROOT-formatted data into Python that does not itself depend on ROOT. It also has easy-to-use interfaces to [Pandas](https://pandas.pydata.org/), which is a useful data-manipulation and -analysis tool that interfaces nicely with TensorFlow. These tools facilitate reading an LZap output file into Python in just a handful of lines of code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**When running on Google colab, the data must be downloaded first:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100     9  100     9    0     0     29      0 --:--:-- --:--:-- --:--:--    29\n",
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100     9  100     9    0     0     30      0 --:--:-- --:--:-- --:--:--    30\n",
+      "CH3TData.root  DANCE_ML_Intro_Tutorial.ipynb  DDData.root  README.md  data\n"
+     ]
+    }
+   ],
+   "source": [
+    "! mkdir -p 'data'\n",
+    "! cd data\n",
+    "! curl -O https://github.com/swkravitz/dance-ml-2020-tutorial/data/CH3TData.root\n",
+    "! curl -O https://github.com/swkravitz/dance-ml-2020-tutorial/data/DDData.root\n",
+    "! ls\n",
+    "! cd .."
    ]
   },
   {
