Support for Google colab

--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -145,18 +145,15 @@
       "100     9  100     9    0     0     29      0 --:--:-- --:--:-- --:--:--    29\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100     9  100     9    0     0     30      0 --:--:-- --:--:-- --:--:--    30\n",
-      "CH3TData.root  DANCE_ML_Intro_Tutorial.ipynb  DDData.root  README.md  data\n"
+      "100     9  100     9    0     0     30      0 --:--:-- --:--:-- --:--:--    29\n"
      ]
     }
    ],
    "source": [
-    "! mkdir -p 'data'\n",
-    "! cd data\n",
     "! curl -O https://github.com/swkravitz/dance-ml-2020-tutorial/data/CH3TData.root\n",
     "! curl -O https://github.com/swkravitz/dance-ml-2020-tutorial/data/DDData.root\n",
-    "! ls\n",
-    "! cd .."
+    "! mkdir -p 'data'\n",
+    "! cp *.root data/"
    ]
   },
   {
