Properly download data for Google colab

--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -133,27 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100     9  100     9    0     0     29      0 --:--:-- --:--:-- --:--:--    29\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100     9  100     9    0     0     30      0 --:--:-- --:--:-- --:--:--    29\n"
+      "2020-07-31 18:14:20 URL:https://raw.githubusercontent.com/swkravitz/dance-ml-2020-tutorial/master/data/CH3TData.root [1824247/1824247] -> \"data/CH3TData.root\" [1]\n",
+      "2020-07-31 18:14:21 URL:https://raw.githubusercontent.com/swkravitz/dance-ml-2020-tutorial/master/data/DDData.root [1398037/1398037] -> \"data/DDData.root\" [1]\n"
      ]
     }
    ],
    "source": [
-    "! curl -O https://github.com/swkravitz/dance-ml-2020-tutorial/data/CH3TData.root\n",
-    "! curl -O https://github.com/swkravitz/dance-ml-2020-tutorial/data/DDData.root\n",
     "! mkdir -p 'data'\n",
-    "! cp *.root data/"
+    "! wget -nv -O data/CH3TData.root https://github.com/swkravitz/dance-ml-2020-tutorial/blob/master/data/CH3TData.root?raw=true\n",
+    "! wget -nv -O data/DDData.root https://github.com/swkravitz/dance-ml-2020-tutorial/blob/master/data/DDData.root?raw=true"
    ]
   },
   {
