Embed images into notebook

--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -13,12 +13,29 @@
     "This example runs through all of the major conceptual steps involved in a common machine learning application. It is focused on fairly basic algorithms (boosted decision trees and multi-layer perceptrons i.e. simple neural nets) that use only a few high-level input variables and do not require much tuning by the user. \n",
     "It is meant to show how to load and investigate particle physics data in ROOT format with uproot, train a basic model, gauge its performance, and save the model for future use. \n",
     "\n",
-    "Specifically, we consider the toy case of distinguishing data from two standard calibration sources in LUX, a liquid xenon TPC dark matter detector. These two sources are CH3T (tritium) events, which are electron recoils (background-like), and DD events, which are nuclear recoils (similar to a WIMP dark matter signal).\n",
+    "Specifically, we consider the toy case of distinguishing data from two standard calibration sources in LUX, a liquid xenon TPC dark matter detector. These two sources are CH3T (tritium) events, which are electron recoils (background-like), and DD events, which are nuclear recoils (similar to a WIMP dark matter signal).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Quick intro to LUX here**\n",
     "\n",
-    "** Quick intro to LUX here **\n",
-    "\n",
-    "** How data was generated using NEST here **\n",
-    "\n",
+    "<img src=\"https://raw.githubusercontent.com/swkravitz/dance-ml-2020-tutorial/master/images/LUX_TPC.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**How data was generated using NEST here**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Aside on packages:** We focus on the scikit-learn package for boosted decision trees and the TensorFlow 2 package for neural nets. TensorFlow 2 is an excellent package for most modern deep learning, i.e. neural nets of all kinds. scikit-learn has the benefit of having the widest variety of machine learning algorithms and being well-documented; it also includes a number of helper functions that are useful for data prep and performance evaluation, regardless of which package is used for training. There is also an XGBoost section at the end that goes through the corresponding code for training and investigating a boosted decision tree - it is a dedicated package for boosted decision trees, and is generally more performant and has more features than sklearn's BDT."
    ]
   },
@@ -71,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"DT_example.png\">"
+    "<img src=\"https://raw.githubusercontent.com/swkravitz/dance-ml-2020-tutorial/master/images/DT_example.png\">"
    ]
   },
   {
@@ -760,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"ML_tutorial_tree.png\">"
+    "<img src=\"https://raw.githubusercontent.com/swkravitz/dance-ml-2020-tutorial/master/images/ML_tutorial_tree.png\">"
    ]
   },
   {
@@ -1323,7 +1340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"NN_example.png\">"
+    "<img src=\"https://raw.githubusercontent.com/swkravitz/dance-ml-2020-tutorial/master/images/NN_example.png\" width=\"600\">"
    ]
   },
   {
@@ -2320,9 +2337,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow-v2.0.0-cpu",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow_intel_2.0.0-py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2334,7 +2351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
