Update package installs

--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --user -q uproot"
+    "!pip install -q uproot"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "source": [
     "`!` is an IPython magic command which causes the subsequent line to be executed by the shell instead of with the Python interpreter. Documentation on it can be found at https://ipython.readthedocs.io/en/stable/interactive/magics.html#magic-system\n",
     "\n",
-    "**<p style=\"color:red;\">Note: After installing packages (such as uproot), you will have to restart the kernel for the changes to take effect (from top menu, Runtime -> Restart runtime). If running on your own machine, install the additional packages below; you may find errors related to outdated versions of those packages, which can be solved by running the corresponding pip command with the --U flag added to the other flags (you may want to remove -q so you can see the status output).</p>**"
+    "**<p style=\"color:red;\">Note: This should work out of the box on Google colab. If running on your own machine, install the additional packages below; when doing so using the --user option, you must restart the kernel for the changes to take effect. You may find errors related to outdated versions of those packages, which can be solved by running the corresponding pip command with the --U flag added to the other flags (you may want to remove -q so you can see the status output).</p>**"
    ]
   },
   {
