Updates to intro, images

--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -9,7 +9,7 @@
     "### Scott Kravitz (swkravitz@lbl.gov)\n",
     "#### Adapted from a tutorial by Scott Kravitz, Micah Buuck (mbuuck@slac.stanford.edu), and Reed Watson (watson_james@berkeley.edu)\n",
     "### DATE: August 2020\n",
-    "##### **Run on Google colab [here](https://colab.research.google.com/github/swkravitz/dance-ml-2020-tutorial/blob/master/DANCE_ML_Intro_Tutorial.ipynb) **\n",
+    "##### **Run on Google colab [here](https://colab.research.google.com/github/swkravitz/dance-ml-2020-tutorial/blob/master/DANCE_ML_Intro_Tutorial.ipynb)**\n",
     "This example runs through all of the major conceptual steps involved in a common machine learning application. It is focused on fairly basic algorithms (boosted decision trees and multi-layer perceptrons i.e. simple neural nets) that use only a few high-level input variables and do not require much tuning by the user. \n",
     "It is meant to show how to load and investigate particle physics data in ROOT format with uproot, train a basic model, gauge its performance, and save the model for future use. \n",
     "\n",
@@ -23,13 +23,6 @@
     "**Quick intro to LUX here**\n",
     "\n",
     "<img src=\"https://raw.githubusercontent.com/swkravitz/dance-ml-2020-tutorial/master/images/LUX_TPC.png\" width=\"600\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**How data was generated using NEST here**"
    ]
   },
   {
@@ -88,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +102,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(If you're familiar with the [NEST](https://github.com/NESTCollaboration/nest) simulation package, you can make your own datasets by cloning the public NEST repo, building, running the commands in `data/DANCE-ML-generation.sh`, and then converting the .dat files (raw text) to ROOT format using `data/ConvertDatToROOT.ipynb`.)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
