Updates to suggested exercises

--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -1049,34 +1049,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7849293563579278 4.436557231588288\n",
-      "0.7849293563579278 4.436557231588288\n",
-      "0.7849293563579278 4.436557231588288\n",
-      "0 1\n",
-      "0 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "#plt.hist(w_train,density=True)\n",
-    "#plt.hist(w_test,alpha=0.7,density=True)\n",
-    "#x_train_unscaled, x_test_unscaled, y_train, y_test, w_train, w_test = train_test_split(X_unscaled, Y, weights, test_size=0.3, random_state=0, shuffle=True, stratify=Y)\n",
-    "print(np.min(W),np.max(W))\n",
-    "print(np.min(w_train),np.max(w_train))\n",
-    "print(np.min(w_test),np.max(w_test))\n",
-    "print(np.min(y_train),np.max(y_train))\n",
-    "print(np.min(y_test),np.max(y_test))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2307,6 +2279,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See the explanation of different metrics [here](https://xgboost.readthedocs.io/en/latest/python/python_api.html#xgboost.Booster.get_score)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -2982,11 +2961,20 @@
     "\n",
     "Try adding new input variables (reload the dataset with branch_names updated, then change the variable_names as well) - this may boost performance, but the added complexity also means a higher risk of overtraining\n",
     "\n",
-    "Try adjusting the number of trees (BDT) or the number of epochs trained for (NN) to avoid overtraining\n",
+    "Try adjusting the number of trees (BDT) or the number of epochs trained for (NN) to avoid overtraining; what does adding a dropout layer to the NN do?\n",
     "\n",
-    "Try adjusting the hyperparameters (e.g. max_depth for BDT, number/size of hidden layers or activation functions for NN, ...)\n",
+    "Try adjusting the loss function for the NN, e.g. to the mean error instead of mean squared error\n",
     "\n",
-    "Take a look at the events that are misclassified - can you figure out what's going wrong and how to address it? "
+    "Try hyperparameter optimization (e.g. max_depth for BDT, number/size of hidden layers or activation functions for NN, ...)\n",
+    "\n",
+    "Take a look at the events that are misclassified - is anything being missed? How might you improve these cases?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**As is often the case for coding problems, when in doubt, try searching online (StackOverflow and the online APIs for TensorFlow, sklearn, XGBoost have a lot of answers)**"
    ]
   },
   {
