Update file reading with uproot 4

--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -190,7 +190,7 @@
     "dd_fname = 'DDData.root'\n",
     "dd_nest = uproot.open( 'data/'+dd_fname )[\"nest\"]\n",
     "print(\"Variables available: \",dd_nest.keys())\n",
-    "dd_df = dd_nest.pandas.df(branch_names)\n",
+    "dd_df = dd_nest.arrays(branch_names, library=\"pd\")\n",
     "\n",
     "# Basic quality cuts\n",
     "dd_df = dd_df[dd_df['driftTime_us']<drift_max]\n",
@@ -222,7 +222,7 @@
     "# Get CH3T data\n",
     "ch3t_fname = 'CH3TData.root'\n",
     "ch3t_nest = uproot.open( 'data/'+ch3t_fname )[\"nest\"]\n",
-    "ch3t_df = ch3t_nest.pandas.df(branch_names)\n",
+    "ch3t_df = ch3t_nest.arrays(branch_names, library=\"pd\")\n",
     "\n",
     "# Basic quality cuts\n",
     "ch3t_df = ch3t_df[ch3t_df['driftTime_us']<drift_max]\n",
@@ -3035,7 +3035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
