--- a/DANCE_ML_Intro_Tutorial.ipynb
+++ b/DANCE_ML_Intro_Tutorial.ipynb
@@ -655,7 +655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pattern above is fairly typical of training: with increased complexity, the model starts being able to fit to the statistical fluctuations of the training data, so the training performance continues to increase and is higher than the test performance. But that doesn't help the performance on the test data. If the test performance is improving but the training performance isn't, we should probably stop training, and may want to try adjusting other parameters to help with this, too.\n",
+    "The pattern above is fairly typical of training: with increased complexity, the model starts being able to fit to the statistical fluctuations of the training data, so the training performance continues to increase and is higher than the test performance. But that doesn't help the performance on the test data. If the training performance is improving but the test performance isn't, we should probably stop training, and may want to try adjusting other parameters to help with this, too.\n",
     "\n",
     "We also may not want to use accuracy as our metric, since this assumes a particular cut value (0 by default for the BDT), which may not be where we want to cut. One metric that accounts for the full range of possible cut values is the ROC area under the curve (AUC), which is exactly what it sounds like - the integral of the ROC curve. It is similar to accuracy in that it is 0 in the worst case, and 1 in the case of perfect classification. But keep in mind that no single metric can capture the full range of information in the ROC curve."
    ]
